--- a/src/app/pages/global/top/top.component.scss
+++ b/src/app/pages/global/top/top.component.scss
@@ -1,8 +1,19 @@
+$desktop:1280px;
+
+@mixin desktop {
+    @media only screen and (min-width: $desktop){
+        @content;
+    }
+}
+
 .text {
     color: white;
     font-family:'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif ;
     font-size:0.9rem;
     margin-left: 2vw;
+    @include desktop {
+        font-size: 1.5rem;
+    }
 }
 
 .top {
