zoom and try numbers

--- a/src/app/pages/global/gallery/gallery.component.html
+++ b/src/app/pages/global/gallery/gallery.component.html
@@ -1,7 +1,7 @@
 <h2 class='text'>Documentales</h2>
 <div class='docu'>
     <div *ngFor="let item of docu">
-        <img src="{{item.url}}" alt="{{item.name}}">
+        <img src="{{item.url}}" alt="{{item.name}}" class='zoom'>
         
     </div>
 </div>
@@ -9,7 +9,7 @@
 <h2 class='text'>Series TV Premiadas</h2>
 <div class='docu'>
     <div *ngFor="let item of series">
-        <img src="{{item.url}}" alt="{{item.name}}">
+        <img src="{{item.url}}" alt="{{item.name}}" class='zoom'>
         
     </div>
 </div>
