--- a/src/app/pages/global/nav/nav.component.html
+++ b/src/app/pages/global/nav/nav.component.html
@@ -4,3 +4,17 @@
         <li  *ngFor="let item of nav" >{{item}}</li>
     </ul>
 </div>
+ 
+<!-- <nav class='menu'>
+    <img src="{{logo}}" alt="Netflix" class='logo'>
+    <ul class='menu_item'>
+        <li class='active'><a href="#">Inicio</a></li>
+        <li><a href="#">Series TV</a></li>
+        <li><a href="#">Películas</a></li>
+        <li><a href="#">Novedades más vistas</a></li>
+        <li><a href="#">Mi lista</a></li>
+    </ul>
+</nav>
+<span class='btn_menu'>
+    <i class="icon"></i>
+</span> -->
