--- a/src/app/pages/global/top/top.component.scss
+++ b/src/app/pages/global/top/top.component.scss
@@ -27,81 +27,74 @@ $desktop:1280px;
         padding: 0px;
         margin: 0px;
 
-        &::before{
-            content:"1";
-            font-size: 20vh;
-            font-weight: bold;
-            margin: 0px;
-            font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-            position: relative;
-            left: 4vh;
-            z-index: 0;
-        }
-
         img {
-            height: 15vh ;
+            height: 20vh ;
             z-index: 3;
             margin:0px;
             cursor: pointer;
         }
     }
-}
+} 
 
 .one {
     &::before{
-        content:"1";
-        font-size: 20vh;
+         content:"1";
+         font-size: 28vh;
+         font-weight: bold;
+         margin: 0px;
+         font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+         position: relative;
+         left: 4vh;
+         z-index: 0;
+     }
+}
+.two{
+    &::before{
+        content:"2";
+        font-size: 28vh;
         font-weight: bold;
         margin: 0px;
         font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
         position: relative;
         left: 4vh;
-        z-index: 1;
+        z-index: 0;
+
     }
-}
-.two::before{
-    content:"2";
-    font-size: 20vh;
-    font-weight: bold;
-    margin: 0px;
-    font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-    position: relative;
-    left: 4vh;
-    z-index: 1;
 }
 .three::before{
     content:"3";
-    font-size: 20vh;
+    font-size: 28vh;
     font-weight: bold;
     margin: 0px;
     font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     position: relative;
     left: 4vh;
-    z-index: 1;
+    z-index: 0;
 }
 .four::before{
     content:"4";
-    font-size: 20vh;
+    font-size: 28vh;
     font-weight: bold;
     margin: 0px;
     font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     position: relative;
     left: 4vh;
-    z-index: 1;
+    z-index: 0;
 }
 .five::before{
     content:"5";
-    font-size: 20vh;
+    font-size: 28vh;
     font-weight: bold;
     margin: 0px;
     font-family: 'Netflix Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
     position: relative;
     left: 4vh;
-    z-index: 1;
+    z-index: 0;
 }
 
 .zoom {
     transition: .2s;
+    z-index: 3;
 
     &:hover {
         transform: scale(1.5);
